[package]
name = "subswap-market"
version = "2.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset management pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "2.0.0-rc6", default-features = false, path = "../../primitives/runtime" }
# Needed for type-safe access to storage DB.
frame-support = { version = "2.0.0-rc6", default-features = false, path = "../support" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "2.0.0-rc6", default-features = false, path = "../system" }
pallet-timestamp = { version = "2.0.0-rc6", default-features = false, path = "../timestamp" }
pallet-balances = { version = "2.0.0-rc6", default-features = false, path = "../balances" }
subswap-asset = { version = "2.0.0-rc6", default-features = false, path = "../asset" }

[dev-dependencies]
sp-std = { version = "2.0.0-rc6", path = "../../primitives/std" }
sp-io = { version = "2.0.0-rc6", path = "../../primitives/io" }
sp-core = { version = "2.0.0-rc6", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]

